package pt.ipp.isep.dei.service;

import pt.ipp.isep.dei.domain.Path;
import pt.ipp.isep.dei.domain.locomotive.RailwayLine;


public class RailwayLineService {
    public double calculateConstructionCost(Path path) {
        throw new UnsupportedOperationException("Not supported yet.");
    }

    public boolean validateRailwayLine(RailwayLine railwayLine) { 
        throw new UnsupportedOperationException("Not supported yet.");
    }
}
